--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "soq",
+  "name": "soq28782076",
   "version": "0.0.0",
-  "description": "Small description for soq goes here",
+  "description": "Small description for soq28782076 goes here",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -33,6 +33,7 @@
     "ember-data": "1.0.0-beta.14.1",
     "ember-export-application-global": "^1.0.2",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "rimraf":"2.2.8"
   }
 }
